# roq-logging

./: .gitattributes  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CPPLINT.cfg  Makefile.am  README.md  configure.ac  roq-logging.pc.in
conda/: build.sh  meta.yaml
doxygen/: Doxyfile.in
include/roq/: Makefile.am  application.h  experimental.h  format_str.h  logging.h  logging.hpp  service.h  service.hpp  static.h  tool.h  tool.hpp
include/roq/logging/: factory.hpp  handler.hpp  level.hpp  logger.hpp  settings.hpp  shared.hpp
include/roq/logging/flags/: parser.hpp  settings.hpp
src/roq/: CMakeLists.txt  Makefile.am  application.cpp  flags.h  flags.hpp  logger.cpp  logging.cpp  service.cpp  static.cpp  tool.cpp  unwind.cpp  unwind.h  unwind.hpp  utils.cpp  utils.hpp
src/roq/compat/: CMakeLists.txt  abseil.cpp  abseil.h  abseil.hpp
src/roq/flags/: CMakeLists.txt  flags.cpp  flags.h
src/roq/logging/: CMakeLists.txt  factory.cpp  handler.cpp  logger.cpp  shared.cpp
src/roq/logging/flags/: CMakeLists.txt  flags.cpp  flags.h  flags.hpp  main.cpp  parser.cpp  settings.cpp
src/roq/logging/spdlog/: CMakeLists.txt  logger.cpp  logger.hpp
src/roq/logging/standard/: CMakeLists.txt  logger.cpp  logger.hpp
src/roq/logging/test/: .gitignore  CMakeLists.txt  logging.cpp  main.cpp  regex.cpp  shared.hpp  stacktrace.cpp
test/: CMakeLists.txt  Makefile.am  logging.cpp  main.cpp  regex.cpp  shared.hpp  stacktrace.cpp
